<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_cat_contact" >
        
        <PreferenceScreen
            android:summary="@string/pref_feedback_desc"
            android:title="@string/pref_feedback" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="mailto:lars.streblow@gmx.de?subject=About+File+Explorer" >
            </intent>
        </PreferenceScreen>
        
        <PreferenceScreen
            android:summary="@string/pref_website_desc"
            android:title="@string/pref_website" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.github.com/streblow" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_cat_share" >
        <PreferenceScreen
            android:id="@+id/pref_item_share"
            android:key="pref_opt_share"
            android:summary="@string/pref_share_desc"
            android:title="@string/pref_share" >
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_cat_about" >
        <PreferenceScreen
            android:selectable="false"
            android:summary="@string/app_version"
            android:title="@string/pref_app_version" >
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>